# notDansCode

./: .breakpoints  .replit  README.md  anton_py_qt_replit_test  anton_py_qt_replit_test.py  carCostCalculator.py  coolCode.py  danitis_data.py  gitCommandNotes.txt  nukes.py  pyproject.toml  run.py  runThisTkinterToClear.py  satalites.py  usefulGitCommads.txt
aFolder/: coolCode.py
