[tool.poetry]
name = "notdanscode"
version = "0.1.0"
description = ""
authors = ["mikkowus <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.6"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
